syntax="proto3";

package widgets.service;

import "models.proto";
import "google/protobuf/any.proto";

option go_package= "widgetpb";

service Widg {
  //Store/Delete 1 widget and Retrieve one/all widgets within context
  rpc StoreWidget(StoreRequest) returns (StoreResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc UpdateWidget(UpdateRequest) returns (UpdateResponse);
  rpc MoveWidget(MoveRequest) returns (MoveResponse);
  rpc LookupWidget(LookupRequest) returns (LookupResponse);
  rpc LookupShowcase(LookupShowcaseRequest) returns(LookupShowcaseResponse);
  rpc LookupBlogcase(LookupBlogcaseRequest) returns(LookupBlogcaseResponse);
}

message Empty{}

message StoreRequest{
  string OwnerID = 1;
  string ReplyID = 2;
  string Body = 3;
  bool Showcase = 4;
}

message StoreResponse{
  string WidgetID = 1;
}

message DeleteRequest{
  string UID = 1;
  string Password = 2;
  google.protobuf.Any WidgetData = 3;
}

message DeleteResponse{}

message LookupRequest{
  string UID = 1;
  string WidgetID = 2;
}

message LookupResponse{
  widget.models.Widget WidgetData = 1;
  string Time = 2;
}

message LookupAllRequest{
  string OwnerID = 1;
}

message LookupAllResponse{
  repeated widget.models.Widget WidgetData = 1;
}

message LookupShowcaseRequest{
  string OwnerID = 1;
}

message LookupShowcaseResponse{
  string WidgetID = 1;
  repeated widget.models.Widget WidgetData = 2;
}

message LookupBlogcaseRequest{
  string OwnerID = 1;
}

message LookupBlogcaseResponse{
  string WidgetID = 1;
  repeated widget.models.Widget WidgetData = 2;
}